--- a/UaCH/localisation/uach_gov_l_english.yml
+++ b/UaCH/localisation/uach_gov_l_english.yml
@@ -28,10 +28,11 @@
  UACH_GOV_REFORM_COOLDOWN: "A succession crisis policy"
  uach_persianization: "Persianization"
  uach_persianization_desc: "As the Timurid State stabilizes after the disastrous succession crisis, there is a choice of path forward for its new leadership. This measures the progress a state has made towards its Persianization: a positive value indicates that the state is slowly moving closer to a Persian identity, while a negative value indicates that the state is returning to its Mongol roots.\nPersianization is increased by:\nBeing at peace: §G+0.2§! per month.\nBeing at war: §R-0.2§! a month.\nWinning a war (not counting separate peaces): §R-5§!"
- UACH_PERSIANIZED_EFFECT_RESULT_TT: "We will integrate all loyal subjects and convert our disloyal ones into vassals, and reform our government from that of a lowly Timurid Prince to a magnificent Persia."
+ UACH_PERSIANIZED_EFFECT_RESULT_TT: "We will integrate all loyal subjects and convert our disloyal ones into vassals.\nWe wiwll go down the §YPersian§! path of our mission tree, which will push us towards forming @PER §YPersia§!."
  uach_scrap_a_reform: "Scrap a Reform"
  uach_scrap_a_reform_desc: "We can scrap a reform or two to mollify our subjects, but this will hurt our progress towards reforming the state."
  UACH_P2FM_R_TT: "We will integrate all loyal subjects and convert our disloyal ones into vassals."
+ TIM_HORDE_MISSIONS:0 "We will go down the §YNomad§! path of our mission tree, which will push us towards reclaiming Timur's dream."
  ability_uach_reform_state_mechanic: "Reform the Timurid State"
  uach_fully_mongolize: "Monglize the State"
  uach_fully_mongolize_desc: "Timur had a vision for his empire: a new, vast horde, modeled on the Mongol Empire of old; a horde that kept to the old Mongol laws and traditions. A state that cared little for the culture and wealth of Persia, and focused instead of wholesale conquest. As the true heirs of Timur, it is up to us to realize this vision."
